demo/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
  namespace: demo
  labels:
    app: demo
spec:
  type: ClusterIP
  selector:
    app: demo
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
